[package]
name = "tinyrender"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
obj = "0.10.2"
num = "0.4.0"
time = "0.3.7"
clap = { version = "3.1.18", features = ["derive"] }
crossbeam = "0.8.1"

[profile.release]
debug = true